modified styling part

--- a/Time-Line Project/style.css
+++ b/Time-Line Project/style.css
@@ -81,7 +81,7 @@ body {
   font-size: 18px;
   padding: 12px 30px;
   margin-left: 10px;
-  transition: transfor, 0.2 ease-in-out;
+  transition: transform 0.2 ease-in-out;
 }
 
 .btn:active {
